--- a/week-2/day3/styles/banner.css
+++ b/week-2/day3/styles/banner.css
@@ -2,4 +2,28 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+}
+
+.banner__info {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+
+.banner__slogan-wrapper {
+  background-color: #223F6A;
+}
+
+.banner__slogan {
+  color: #fff;
+  padding: 18px 0;
+  max-width: 1100px;
+  letter-spacing: 2px;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+  font-size: 24px;
+  line-height: 1.5;
 }
