feat: cloning finished

--- a/week-2/day3/index.css
+++ b/week-2/day3/index.css
@@ -15,6 +15,7 @@
   color: #1A355B;
   box-sizing: border-box;
   font-family: 'Work Sans', 'Arial', sans-serif;
+  font-style: normal;
   font-size: 16px;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
