--- a/week-2/day3/fonts/fonts.css
+++ b/week-2/day3/fonts/fonts.css
@@ -14,7 +14,14 @@
 
 @font-face {
   font-family: 'Work Sans';
-  src: url(../fonts//WorkSans-Light.ttf);
+  src: url(../fonts/WorkSans-Light.ttf);
   font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../fonts/Montserrat-Bold.ttf);
+  font-weight: 700;
   font-style: normal;
 }
