--- a/week-2/day3/styles/about.css
+++ b/week-2/day3/styles/about.css
@@ -4,6 +4,7 @@
   gap: 100px;
   padding: 33px 2% 23px;
   margin: 0 auto;
+  background: linear-gradient(90deg, rgba(2,185,241,.1) 0%, rgba(2,185,241,.1) 16%, rgba(2,185,241,0) 60%);
 }
 
 .section__link {
@@ -11,7 +12,7 @@
   color: #b88216;
   font-size: 35px;
   letter-spacing: 2px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
 }
 
@@ -19,9 +20,11 @@
   margin: 36px 0 12px;
 }
 
-.section__description {
+.about__description {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.9;
   letter-spacing: 1px;
+  margin: 0 0 24px;
+  font-weight: 300;
 }
