--- a/week-2/day3/styles/banner.css
+++ b/week-2/day3/styles/banner.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
+  margin-bottom: 32px;
 }
 
 .banner__info {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%)
 }
@@ -22,8 +23,30 @@
   max-width: 1100px;
   letter-spacing: 2px;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   font-size: 24px;
   line-height: 1.5;
+}
+
+.banner__title {
+  font-family: 'Montserrat', 'Work Sans', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 2px;
+  color: #2e558f;
+  border-bottom: 3px solid #00b8f1;
+  margin: 36px 0 12px;
+}
+
+.banner__subtitle {
+  text-align: right;
+  font-size: 19px;
+  line-height: 1;
+  letter-spacing: 1px;
+  font-style: italic;
+  font-weight: 300;
+  font-family: Georgia, serif;
+  color: #899dbf;
 }
