--- a/week-2/day3/styles/header.css
+++ b/week-2/day3/styles/header.css
@@ -8,10 +8,19 @@ ul li:hover > ul, ul li:hover > div, ul li ul:hover, ul li ul li:hover > p {
 }
 
 .header {
-  height: 200px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  background-color: #fff;
+  width: 100%;
+  font-size: 14px;
+  padding: 20px 2% 70px;
+  box-sizing: border-box;
+  background: linear-gradient(rgba(255,255,255,1) 0%, rgba(255,255,255,1) 33%, rgba(255,255,255,0.3) 82%, rgba(255,255,255,0) 100%);
 }
 
 .header__logo {
@@ -24,44 +33,39 @@ ul li:hover > ul, ul li:hover > div, ul li ul:hover, ul li ul li:hover > p {
 }
 
 .header__menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   width: 100%;
-  align-items: center;
-  position: relative;
 }
 
 .header__navigation {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-end;
   margin: 0;
   padding: 0;
-  width: 70%;
+  position: relative;
+}
+
+.menu__item {
+  font-weight: 400;
+  line-height: 48px;
+  color: #1A355B;
+  text-decoration: none;
+  transition-duration: .5s;
+  font-size: 14px;
   position: relative;
 }
 
 .header__menu-item {
-  transition-duration: .5s;
-  padding: 1rem;
-  font-size: 14px;
-  line-height: 1.2;
-  color: #1A355B;
-  text-decoration: none;
+  margin-right: 6px;
+  padding: 0 0 0 18px;
+  letter-spacing: 0;
+}
+
+.dropdown__menu-item {
+  display: block;
+  padding: 0 18px 0 6px;
   margin: 0;
-  position: relative;
-}
-
-.header__menu-item::after {
-  content: "\f502";
-  font-family: Genericons;
-  font-size: 12px;
-  margin-left: 10px;
-}
-
-.header__menu-item:hover {
-  background: #EFEFEF ;
+  float: right;
 }
 
 .nav-list {
@@ -76,30 +80,23 @@ ul li:hover > ul, ul li:hover > div, ul li ul:hover, ul li ul li:hover > p {
   position: absolute;
   left: 0;
   top: 33px;
-  min-width: 200px;
+  width: 100%;
+  min-width: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   transition: all .4s ease;
-  background: #EFEFEF;
-  font-size: 14px;
-  line-height: 1.2;
-  color: #000;
   margin: 0;
   z-index: 10;
-}
-
-.dropdown__menu-item {
-  transition-duration: .5s;
-  display: block;
-  padding: .5rem;
-  font-size: 14px;
-  line-height: 1.4;
-  color: #000;
-  text-decoration: none;
-  margin: 0;
-  padding: 0 22px 0 0;
-  position: relative;
+  padding: 15px 0 0;
 }
 
 .dropdown__menu-item:hover {
   background: #AEED59;
   transition-duration: .8s;
+}
+
+.menu__icon {
+  /* rotate: 90deg; */
+  font-size: 14px;
 }
